--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "axios": "^0.27.2",
     "graphql": "^16.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
